# cloudbak-we-sync

./: .gitignore  package-lock.json  package.json  tsconfig.json  update.version.js  vite.config.ts
.github/workflows/: realease.yml
src/: App.vue  main.ts
src-tauri/: .gitignore  Cargo.toml  entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: auth.rs  fs.rs  mod.rs  startup.rs  sync.rs  wechat.rs
src-tauri/src/common/: mod.rs  store_utils.rs
src-tauri/src/internal/: app_paths.rs  mod.rs
src-tauri/src/internal/wechat/: mod.rs
src-tauri/src/internal/wechat/common/: extractor_trait.rs  mod.rs  trait.rs  types.rs
src-tauri/src/internal/wechat/mac/: glance.rs  mod.rs
src-tauri/src/internal/wechat/mac/v3/: extractor.rs
src-tauri/src/internal/wechat/mac/v4/: extractor.rs
src-tauri/src/internal/wechat/win/: mod.rs
src-tauri/src/internal/wechat/win/v3/: extractor.rs
src-tauri/src/internal/wechat/win/v4/: extractor.rs
src-tauri/src/internal/windows/: avatar.rs  dat2img.rs  db_decrypt.rs  integration_tests.rs  main.rs  memory.rs  mod.rs  system_test.rs  validator.rs  winproc.rs
src/api/: api.ts  auth.ts  sys.ts  task.ts  user.ts
src/common/: login.ts  store.ts
src/components/Session/: SessionSidebar.vue
src/components/SessionDetail/: ActionButtons.vue  AutoSyncCard.vue  BasicInfoCard.vue  EmptyState.vue  FilterConfigCard.vue  KeyInfoCard.vue  LoadingState.vue  NewSessionPreview.vue  StorageInfoCard.vue  UserHeader.vue
src/models/: login.ts  session.ts  tauri.ts
src/router/: index.ts
src/views/: Home.vue  Login.vue  Settings.vue  SysInfo.vue  UpdateDetail.vue
src/views/session/: SessionDetail.vue  SessionDetailPage.vue
